Added SBT commands to initialize project files